--- a/second task/index.html
+++ b/second task/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="widli=device-widli, initial-scale=1.0">
     <title>Second task</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
